@@ -1,0 +1,10 @@
+package test.reports.issue2069;
+
+import junit.framework.TestCase;
+
+public class Dummy2 extends TestCase {
+
+  public void testScheduleDelete() {
+  }
+}
+
